--- a/docs/src/app/documentation/page/page.component.scss
+++ b/docs/src/app/documentation/page/page.component.scss
@@ -227,7 +227,10 @@
 
   @include media-breakpoint-up(md) {
     .middle-column ::ng-deep nb-card nb-card-body {
-      padding: 2rem 3rem 2rem 2rem;
+      padding: 2rem 2rem 2rem 2rem;
+    }
+    ::ng-deep nb-card nb-card-header {
+      padding: 1rem 2rem;
     }
   }
 
