--- a/docs/src/app/@theme/styles/themes.scss
+++ b/docs/src/app/@theme/styles/themes.scss
@@ -49,6 +49,8 @@ $nb-themes: nb-register-theme((
   radius: 0.375rem,
   color-fg-highlight: #40dc7e,
 
+  select-min-width: 5rem,
+
   color-fg: white,
   color-fg-heading: #0d1c2e,
   color-fg-text: #919fb1,
