--- a/docs/src/landing/css/reactive-kitten.webflow.css
+++ b/docs/src/landing/css/reactive-kitten.webflow.css
@@ -121,6 +121,7 @@
 }
 
 .text-heading-1.default {
+  width: 100%;
   color: #40414e;
 }
 
@@ -392,6 +393,7 @@
 }
 
 .text-heading-2.alternative.center {
+  width: 100%;
   text-align: center;
 }
 
@@ -400,6 +402,9 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  height: auto;
+  max-width: 1124px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -409,6 +414,13 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
 }
 
 .image-4 {
@@ -421,15 +433,17 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  max-width: 1124px;
   margin-top: 64px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: stretch;
-  -webkit-align-items: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
 }
 
 .feature-title {
@@ -448,6 +462,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   max-width: none;
   margin-top: 24px;
   -webkit-box-pack: center;
@@ -465,7 +480,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: auto;
   margin-top: 0px;
   padding: 100px 10% 120px;
@@ -481,8 +496,9 @@
 }
 
 .feature-card {
+  width: 100%;
   height: auto;
-  max-width: 380px;
+  max-width: 360px;
   margin-right: 12px;
   margin-left: 12px;
   padding: 32px 24px 48px;
@@ -522,7 +538,8 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: 40%;
+  height: 100%;
   padding: 104px 40px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -540,6 +557,10 @@
   -webkit-align-self: flex-start;
   -ms-flex-item-align: start;
   align-self: flex-start;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#fb8120), to(#fe5623));
@@ -555,6 +576,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -571,8 +593,8 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: auto;
-  max-width: 340px;
+  width: 100%;
+  max-width: 280px;
   margin-top: 0px;
   padding: 16px 32px;
   -webkit-box-orient: horizontal;
@@ -601,6 +623,8 @@
   border: 1px none #000;
   border-radius: 4px;
   background-color: #fff;
+  -webkit-transition: color 120ms ease, background-color 120ms ease;
+  transition: color 120ms ease, background-color 120ms ease;
   font-family: 'Open Sans', sans-serif;
   color: #ff6721;
   font-size: 18px;
@@ -655,6 +679,8 @@
 }
 
 .div-block-19 {
+  width: 100%;
+  min-width: 440px;
   margin-top: 16px;
   margin-bottom: 0px;
   padding: 16px;
@@ -667,9 +693,9 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
+  width: auto;
   height: 100%;
-  padding: 56px 40px;
+  padding: 0px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -683,14 +709,17 @@
   -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  align-self: stretch;
   -webkit-box-ordinal-group: 1;
   -webkit-order: 0;
   -ms-flex-order: 0;
   order: 0;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
   background-color: #f5f5f5;
@@ -701,10 +730,10 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 70vh;
+  height: 100%;
   max-width: none;
   margin-left: 0px;
-  padding: 0px 10%;
+  padding: 7% 10%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -725,9 +754,12 @@
 }
 
 .div-block-11 {
-  display: -ms-grid;
-  display: grid;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   width: 100%;
+  max-width: 1200px;
   padding-right: 0px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -738,13 +770,12 @@
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
-  justify-items: stretch;
-  -webkit-box-align: start;
-  -webkit-align-items: start;
-  -ms-flex-align: start;
-  align-items: start;
-  -ms-grid-row-align: center;
-  align-self: center;
+  justify-items: start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  align-self: auto;
   -webkit-box-flex: 0;
   -webkit-flex: 0 auto;
   -ms-flex: 0 auto;
@@ -756,6 +787,7 @@
   grid-template-columns: 1.25fr 1.75fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
+  background-color: #f5f5f5;
 }
 
 .text-span {
@@ -885,7 +917,8 @@
 }
 
 .div-block-38 {
-  max-width: none;
+  width: 100%;
+  max-width: 500px;
   margin-top: 32px;
   margin-bottom: 48px;
 }
@@ -913,7 +946,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: auto;
+  width: 100%;
   max-width: 500px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -928,7 +961,8 @@
 
 .div-block-41 {
   position: relative;
-  width: 49%;
+  width: 48%;
+  max-width: 800px;
   margin-top: 10%;
   margin-bottom: 10%;
   -webkit-align-self: stretch;
@@ -973,24 +1007,27 @@
 }
 
 .background-video {
-  position: absolute;
-  left: auto;
+  position: relative;
+  left: 0%;
   top: auto;
-  right: auto;
-  bottom: auto;
+  right: 0%;
+  bottom: 0%;
   z-index: 2;
   overflow: hidden;
   width: 532px;
   height: 1160px;
-  min-width: 0px;
+  max-height: 1160px;
+  max-width: 532px;
+  min-height: 1158px;
+  min-width: 530px;
   -webkit-align-self: auto;
   -ms-flex-item-align: auto;
   -ms-grid-row-align: auto;
   align-self: auto;
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   border-radius: 60px;
   -webkit-transform: scale(0.53);
   -ms-transform: scale(0.53);
@@ -1050,6 +1087,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 60%;
+  height: 100%;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -1117,8 +1155,8 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 120vh;
-  padding: 0px 6% 0px 10%;
+  height: 120%;
+  padding: 12% 6% 12% 10%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -1145,32 +1183,44 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
+  height: 100%;
   padding: 0px;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
 }
 
 .div-block-45 {
   overflow: hidden;
+  width: 100%;
   height: 100%;
+  min-height: 120px;
+  margin-bottom: 16px;
   padding: 16px 24px;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
   flex: 1 0 auto;
 }
 
@@ -1299,6 +1349,9 @@
 }
 
 .text-paragraph-2.quote {
+  width: 100%;
+  height: 100%;
+  min-height: 100px;
   -webkit-transform: none;
   -ms-transform: none;
   transform: none;
@@ -1667,6 +1720,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -1703,7 +1757,10 @@
 .div-block-56 {
   display: -ms-grid;
   display: grid;
+  width: 100%;
   height: 100%;
+  min-width: 100px;
+  grid-auto-flow: row;
   grid-auto-columns: 1fr;
   grid-column-gap: 24px;
   grid-row-gap: 16px;
@@ -1714,6 +1771,7 @@
 }
 
 .div-block-57 {
+  width: 100%;
   padding-right: 0px;
   padding-left: 0px;
 }
@@ -1782,6 +1840,7 @@
   top: 0%;
   right: 0%;
   bottom: auto;
+  z-index: 3;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1866,6 +1925,29 @@
   max-height: 100%;
 }
 
+.div-block-65 {
+  width: auto;
+  height: 100%;
+  padding-right: 32px;
+  padding-left: 32px;
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.div-block-66 {
+  width: 100%;
+}
+
+.div-block-67 {
+  width: 100%;
+}
+
 @media (max-width: 991px) {
   .hero-section {
     padding-bottom: 16%;
@@ -1915,11 +1997,15 @@
     padding-left: 28px;
   }
   .div-block-12 {
+    width: 100%;
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    border-radius: 6px;
+    border-radius: 6px 6px 0px 0px;
+  }
+  .div-block-19 {
+    min-width: 440px;
   }
   .how-to-use-the-ui-kitten {
     height: 100%;
@@ -1936,6 +2022,9 @@
     align-items: center;
   }
   .div-block-11 {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     grid-auto-flow: column;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
@@ -2116,6 +2205,10 @@
   .div-block-64 {
     width: 70%;
   }
+  .div-block-65 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2146,6 +2239,9 @@
     -ms-flex-align: stretch;
     align-items: stretch;
   }
+  .div-block-19 {
+    min-width: 440px;
+  }
   .div-block-18 {
     padding-right: 24px;
     padding-left: 24px;
@@ -2164,6 +2260,9 @@
   }
   .div-block-11 {
     width: 100%;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
     grid-auto-flow: column;
     -ms-grid-columns: minmax(200px, 1fr);
     grid-template-columns: minmax(200px, 1fr);
@@ -2291,6 +2390,13 @@
     height: 460px;
     max-height: 100%;
   }
+  .div-block-65 {
+    width: 100%;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+  }
 }
 
 @media (max-width: 479px) {
@@ -2380,6 +2486,9 @@
     padding-right: 0px;
     padding-left: 0px;
   }
+  .button-giant-white-default {
+    max-width: 260px;
+  }
   .div-block-20 {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2404,6 +2513,9 @@
     -webkit-flex: 0 auto;
     -ms-flex: 0 auto;
     flex: 0 auto;
+  }
+  .div-block-19 {
+    min-width: 240px;
   }
   .div-block-18 {
     padding: 16px;
@@ -2575,6 +2687,7 @@
     box-shadow: 0 4px 12px 0 rgba(64, 65, 78, 0.25);
   }
   .navbar {
+    z-index: 3;
     padding-right: 16px;
     padding-left: 16px;
   }
@@ -2591,13 +2704,16 @@
     border-radius: 6px;
     background-color: #f1f1f1;
   }
+  .div-block-65 {
+    padding: 16px 17px;
+  }
 }
 
 #w-node-e2e89f03d1a5-14eb8bb0 {
-  -webkit-align-self: stretch;
-  -ms-flex-item-align: stretch;
-  -ms-grid-row-align: stretch;
-  align-self: stretch;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  -ms-grid-row-align: auto;
+  align-self: auto;
 }
 
 @media screen and (max-width: 991px) {
