--- a/docs/src/app/@theme/styles/styles.scss
+++ b/docs/src/app/@theme/styles/styles.scss
@@ -19,6 +19,7 @@
   @include nb-select-theme();
   @include nb-input-theme();
   @include nb-overlay-theme();
+  @include nb-radio-theme();
 
   @include nb-typography();
 
