--- a/docs/src/app/blocks/components/code-block/code-block.component.scss
+++ b/docs/src/app/blocks/components/code-block/code-block.component.scss
@@ -13,6 +13,12 @@
     background: $code-block-bg;
     overflow-x: auto;
 
+    .language {
+      position: absolute;
+      right: 0.5rem;
+      top: 4rem;
+    }
+
     .lines {
       display: flex;
       flex-direction: column;
