--- a/docs/src/app/blocks/components/theme-block/theme-block.component.html
+++ b/docs/src/app/blocks/components/theme-block/theme-block.component.html
@@ -1,10 +1,10 @@
 <nb-card>
   <nb-card-body>
-    <h2>{{ vm.themeTitle }} Theme</h2>
-    <p *ngIf="vm.parentTheme">inherited from {{ vm.parentTheme }} theme</p>
+    <h2>{{ themeName }} Theme</h2>
+    <p *ngIf="parentThemeName">inherited from {{ parentThemeName }} theme</p>
 
     <div class="search-wrapper">
-      <input class="search-control" placeholder="Search for..." [formControl]="searchControl">
+      <input nbInput fullWidth class="search-control" placeholder="Search for..." [formControl]="searchControl">
     </div>
 
     <table class="striped">
@@ -17,10 +17,7 @@
       </thead>
 
       <tbody>
-        <tr *ngFor="let prop of vm.filteredThemeProperties | async"
-            [ngdFragment]="prop.name"
-            [ngdFragmentSync]="false"
-            ngdFragmentClass="highlighted-row">
+        <tr *ngFor="let prop of filtered">
           <td>
             <a [routerLink]="" fragment="{{ prop.name }}">{{ prop.name }}</a>
           </td>
@@ -28,15 +25,20 @@
           <td ngdColorSwatch>{{ prop.value }}</td>
 
           <td>
-            <a [routerLink]="['/docs/themes', parent.theme]" fragment="{{ parent.prop }}"
-              [class.inheritance-property]="index > 0"
-              *ngFor="let parent of prop.parents; let index = index">
-              <nb-icon *ngIf="index > 0" class="inheritance-icon" icon="arrow-back-outline"></nb-icon>
-              <span>{{ parent.prop }}</span>
-              <span *ngIf="parent.theme !== vm.themeName" class="parent-theme-name">({{ parent.theme }})</span>
+            <a *ngFor="let parent of prop.parents; let index = index; trackBy: trackByFn"
+              [routerLink]="['/design-system', parent.theme + '-theme']"
+              fragment="{{ parent.prop }}"
+              [class.inheritance-property]="index > 0">
+
+                <nb-icon *ngIf="index > 0" class="inheritance-icon" icon="arrow-back-outline"></nb-icon>
+                <span>{{ parent.prop }}</span>
+                <span *ngIf="parent.theme !== themeName" class="parent-theme-name">({{ parent.theme }})</span>
             </a>
           </td>
         </tr>
+      <tr *ngIf="filtered.length ==0" class="not-found">
+        <td colspan="3">Theme variable not found.</td>
+      </tr>
       </tbody>
     </table>
   </nb-card-body>
