feat(docs): live-examples warning add

--- a/docs/src/app/@theme/styles/styles.scss
+++ b/docs/src/app/@theme/styles/styles.scss
@@ -20,6 +20,7 @@
   @include nb-input-theme();
   @include nb-overlay-theme();
   @include nb-radio-theme();
+  @include nb-tooltip-theme();
 
   @include nb-typography();
 
