--- a/docs/src/app/blocks/components/live-example-block/live-example-block.component.html
+++ b/docs/src/app/blocks/components/live-example-block/live-example-block.component.html
@@ -1,4 +1,4 @@
-<section class="header" >
+<section class="header">
   <strong class="title">{{ content.name }}</strong>
   <div class="actions">
     <a class="btn action-item action-button" target="_blank" [href]="url">
@@ -12,6 +12,12 @@
     </button>
   </div>
 </section>
+<span
+  class="caption-2 title-caption"
+  nbTooltipPlacement="top"
+  nbTooltip="Rendering of React Native components in a web browser is an experimental feature and may contain issues.">
+  <nb-icon icon="alert-triangle"></nb-icon>  Experimental Preview
+</span>
 <div class="iframe-container">
   <iframe #iframe *ngIf="content.id" [style.height.px]="iframeHeight" [class.loading]="loading"></iframe>
 </div>
