--- a/docs/src/app/documentation/documentation.component.html
+++ b/docs/src/app/documentation/documentation.component.html
@@ -13,7 +13,10 @@
 
     <div class="contact-us">
       <h2>Need some help or found an issue?</h2>
-      <p>Contact us at <a href="mailto:contact@akveo.com">contact@akveo.com</a></p>
+      <p>
+        Ask on <a href="https://stackoverflow.com/questions/ask">Stack Overflow</a> with tag `ui-kitten` or
+        post an issue on <a href="https://github.com/akveo/react-native-ui-kitten/issues/new/choose">GitHub</a>.
+      </p>
     </div>
   </nb-layout-column>
   <nb-layout-footer>
