--- a/docs/src/app/@theme/components/footer/footer.component.html
+++ b/docs/src/app/@theme/components/footer/footer.component.html
@@ -4,11 +4,17 @@
 <div>
   <ul>
     <li><strong class="title">More from Akveo</strong></li>
-    <li><a href="http://akveo.com?utm_source=nebular_documentation&utm_medium=footer" target="_blank">Homepage</a></li>
-    <li><a href="https://akveo.github.io/eva-icons?utm_source=nebular_documentation&utm_medium=footer">Eva Icons</a></li>
-    <li><a href="https://akveo.github.io/react-native-ui-kitten?utm_source=nebular_documentation&utm_medium=footer">React Native UI Kitten</a></li>
-    <li><a href="https://akveo.github.io/ngx-admin?utm_source=nebular_documentation&utm_medium=footer"
-           target="_blank">ngx-admin</a></li>
+    <li><a href="http://akveo.com?utm_source=nebular_documentation&utm_medium=footer"
+           target="_blank">Homepage</a></li>
+    <li><a
+      href="https://akveo.github.io/eva-icons?utm_source=nebular_documentation&utm_medium=footer">Eva
+      Icons</a></li>
+    <li><a
+      href="https://akveo.github.io/react-native-ui-kitten?utm_source=nebular_documentation&utm_medium=footer">React
+      Native UI Kitten</a></li>
+    <li><a
+      href="https://akveo.github.io/ngx-admin?utm_source=nebular_documentation&utm_medium=footer"
+      target="_blank">ngx-admin</a></li>
   </ul>
 </div>
 <div>
@@ -32,8 +38,11 @@
   </ul>
 </div>
 <div class="contact">
-  <ul>
-    <li><strong class="title">Contact Us</strong></li>
-    <li><a href="mailto:contact@akveo.com">contact@akveo.com</a></li>
-  </ul>
+  <h2>Need some help or found an issue?</h2>
+  <p>
+    Ask on <a href="https://stackoverflow.com/questions/ask">Stack Overflow</a> with tag `ui-kitten`
+    or
+    post an issue on <a href="https://github.com/akveo/react-native-ui-kitten/issues/new/choose">GitHub</a>.
+  </p>
 </div>
+
