--- a/docs/src/app/@theme/components/footer/footer.component.html
+++ b/docs/src/app/@theme/components/footer/footer.component.html
@@ -1,19 +1,19 @@
 <div class="logo">
-  <a href="http://akveo.com" target="_blank"><img src="assets/img/akveo-logo.png"></a>
+  <a href="https://hubs.ly/H0n6Dcb0" target="_blank"><img src="assets/img/akveo-logo.png"></a>
 </div>
 <div>
   <ul>
     <li><strong class="title">More from Akveo</strong></li>
-    <li><a href="http://akveo.com?utm_source=nebular_documentation&utm_medium=footer"
+    <li><a href="https://hubs.ly/H0n6CXW0"
            target="_blank">Homepage</a></li>
     <li><a
-      href="https://akveo.github.io/eva-icons?utm_source=nebular_documentation&utm_medium=footer">Eva
+      href="https://hubs.ly/H0n6C-Q0">Eva
       Icons</a></li>
     <li><a
-      href="https://akveo.github.io/react-native-ui-kitten?utm_source=nebular_documentation&utm_medium=footer">React
+      href="https://akveo.github.io/react-native-ui-kitten">React
       Native UI Kitten</a></li>
     <li><a
-      href="https://akveo.github.io/ngx-admin?utm_source=nebular_documentation&utm_medium=footer"
+      href="https://hubs.ly/H0n6Dfr0"
       target="_blank">ngx-admin</a></li>
   </ul>
 </div>
@@ -32,7 +32,7 @@
       </a>
     </li>
     <li class="copy">
-      &copy; 2015-2019 <a href="http://akveo.com?utm_source=nebular_documentation&utm_medium=footer" target="_blank">Akveo LLC</a><br>
+      &copy; 2015-2019 <a href="https://hubs.ly/H0n6Dcc0" target="_blank">Akveo LLC</a><br>
       Documentation licensed under CC BY 4.0.
     </li>
   </ul>
