--- a/docs/src/app/documentation/page/page.component.html
+++ b/docs/src/app/documentation/page/page.component.html
@@ -32,25 +32,7 @@
     <ngd-page-tabs [tabs]="currentItem?.tabs"></ngd-page-tabs>
     <ngd-page-toc [toc]="currentItem?.toc"></ngd-page-toc>
 
-    <ngd-hubspot-cta-component *ngIf="!isTabs" ctaId="38b7285f-759c-4b4e-aedc-6391d3af697c">
-      <img class="hs-cta-img"
-           id="hs-cta-img-38b7285f-759c-4b4e-aedc-6391d3af697c"
-           style="border-width:0px; margin-top: 2rem"
-           height="240"
-           width="176"
-           src="https://no-cache.hubspot.com/cta/default/2452262/38b7285f-759c-4b4e-aedc-6391d3af697c.png"
-           alt="Akveo Services"/>
-    </ngd-hubspot-cta-component>
-
-    <ngd-hubspot-cta-component *ngIf="isTabs" ctaId="ec4c1bf6-491c-484a-9d88-60912f897d0a">
-      <img class="hs-cta-img"
-           id="hs-cta-img-ec4c1bf6-491c-484a-9d88-60912f897d0a"
-           style="border-width:0px; margin-top: 2rem"
-           height="120"
-           width="88"
-           src="https://no-cache.hubspot.com/cta/default/2452262/ec4c1bf6-491c-484a-9d88-60912f897d0a.png"
-           alt="Akveo Services"/>
-    </ngd-hubspot-cta-component>
-
+    <ngd-akveo-services-banner *ngIf="!isTabs" height=240 width=176 ctaId="38b7285f-759c-4b4e-aedc-6391d3af697c"></ngd-akveo-services-banner>
+    <ngd-akveo-services-banner *ngIf="isTabs" height=120 width=88 ctaId="ec4c1bf6-491c-484a-9d88-60912f897d0a"></ngd-akveo-services-banner>
   </div>
 </div>
