fix(docs): add scroll to right sidebar

--- a/docs/src/app/documentation/page/page.component.html
+++ b/docs/src/app/documentation/page/page.component.html
@@ -32,7 +32,6 @@
     <ngd-page-tabs [tabs]="currentItem?.tabs"></ngd-page-tabs>
     <ngd-page-toc [toc]="currentItem?.toc"></ngd-page-toc>
 
-    <ngd-akveo-services-banner *ngIf="!isTabs" height=240 width=176 ctaId="38b7285f-759c-4b4e-aedc-6391d3af697c"></ngd-akveo-services-banner>
-    <ngd-akveo-services-banner *ngIf="isTabs" height=120 width=88 ctaId="ec4c1bf6-491c-484a-9d88-60912f897d0a"></ngd-akveo-services-banner>
+    <ngd-akveo-services-banner height=230 width=256 ctaId="38b7285f-759c-4b4e-aedc-6391d3af697c"></ngd-akveo-services-banner>
   </div>
 </div>
