chore(docs): replace hs links back with full ones

--- a/docs/src/app/@theme/components/footer/footer.component.html
+++ b/docs/src/app/@theme/components/footer/footer.component.html
@@ -1,19 +1,19 @@
 <div class="logo">
-  <a href="https://hubs.ly/H0n6Dcb0" target="_blank"><img src="assets/img/akveo-logo.png"></a>
+  <a href="https://www.akveo.com?utm_campaign=services%20-%20homepage%20-%20kitten%20docs&utm_source=ui_kitten&utm_medium=referral&utm_content=footer_logo" target="_blank"><img src="assets/img/akveo-logo.png"></a>
 </div>
 <div>
   <ul>
     <li><strong class="title">More from Akveo</strong></li>
-    <li><a href="https://hubs.ly/H0n6CXW0"
+    <li><a href="https://www.akveo.com?utm_campaign=services%20-%20homepage%20-%20kitten%20docs&utm_source=ui_kitten&utm_medium=referral&utm_content=more_from_akve_footer_link"
            target="_blank">Homepage</a></li>
     <li><a
-      href="https://hubs.ly/H0n6C-Q0">Eva
+      href="https://akveo.github.io/eva-icons?utm_campaign=eva_icons%20-%20home%20-%20ui_kitten%20docs&utm_source=ui_kitten&utm_medium=referral&utm_content=docs_footer_link">Eva
       Icons</a></li>
     <li><a
       href="https://akveo.github.io/react-native-ui-kitten">React
       Native UI Kitten</a></li>
     <li><a
-      href="https://hubs.ly/H0n6Dfr0"
+      href="https://akveo.github.io/ngx-admin?utm_campaign=ngx_admin%20-%20home%20-%20ui_kitten%20docs&utm_source=ui_kitten&utm_medium=referral&utm_content=docs_footer_link"
       target="_blank">ngx-admin</a></li>
   </ul>
 </div>
@@ -32,7 +32,7 @@
       </a>
     </li>
     <li class="copy">
-      &copy; 2015-2019 <a href="https://hubs.ly/H0n6Dcc0" target="_blank">Akveo LLC</a><br>
+      &copy; 2015-2019 <a href="https://www.akveo.com?utm_campaign=services%20-%20homepage%20-%20kitten%20docs&utm_source=ui_kitten&utm_medium=referral&utm_content=footer_akveo_llc" target="_blank">Akveo LLC</a><br>
       Documentation licensed under CC BY 4.0.
     </li>
   </ul>
